fix: header layout issue

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,16 +1,36 @@
 #header {
-  background-color: #00000067;
   position: fixed;
   top: 0;
   z-index: 1;
   width: 100%;
 }
 
+.background {
+  background-color: #222;
+  background: rgba(20, 20, 20, 0.5);
+  backdrop-filter: blur(15.5px);
+  -webkit-backdrop-filter: blur(15.5px);
+  transition: 0.2s ease;
+}
+
 .nav__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1em 0;
+  padding: 4em 0;
+}
+
+.nav__container--pd {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5em 0;
+
+  background-color: #222;
+  background: rgba(20, 20, 20, 0.5);
+  backdrop-filter: blur(15.5px);
+  -webkit-backdrop-filter: blur(15.5px);
+  transition: 0.2s ease;
 }
 
 .logo {
@@ -41,10 +61,11 @@
 }
 
 .nav__mobile-close {
-  background-color: #000000da;
+  background-color: #111;
   color: hsl(0, 0%, 100%);
   width: 100%;
-  height: 400px;
+  height: 700px;
+  overflow-y: hidden;
   display: flex;
   justify-content: center;
   position: fixed;
@@ -64,10 +85,18 @@
   cursor: pointer;
 }
 
-.menu__close {
+.menu__close--scroll {
   position: absolute;
   right: 35px;
   top: 18px;
+  cursor: pointer;
+  z-index: 5;
+}
+
+.menu__close {
+  position: absolute;
+  right: 35px;
+  top: 70px;
   cursor: pointer;
   z-index: 5;
   /* color: #fff; */
@@ -76,17 +105,17 @@
 .nav__list-mobile {
   position: absolute;
   right: 10px;
-  top: 70px;
-  width: 90%;
+  top: 150px;
+  width: 100%;
   display: flex;
   align-items: center;
 }
 
 .nav__item {
   padding: 0.6em 1em;
-  font-size: 1rem;
+  font-size: 30px;
   text-transform: capitalize;
-  font-weight: 700;
+  font-weight: 300;
   color: #fff;
 }
 
